@@ -1,3 +1,7 @@
+2007-02-16  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/screenshot.c: changed hint and button label.
+
 2007-02-16  Mukund Sivaraman <muks@mukund.org>
 
 	* plug-ins/common/png.c: improved handling of incomplete PNG files;
